--- a/package.json
+++ b/package.json
@@ -11,9 +11,18 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
+    "@nuxt/icon": "^1.4.3",
     "@nuxt/image": "^1.7.0",
+    "@nuxt/scripts": "^0.6.5",
+    "@nuxt/ui": "^2.18.3",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@vee-validate/nuxt": "^4.13.2",
+    "@vueuse/core": "^10.11.0",
+    "@vueuse/nuxt": "^10.11.0",
     "nuxt": "^3.12.4",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "nuxt-headlessui": "^1.2.0"
   }
 }
